Changed how buildings are handled